# hyperspex

./: .gitignore  LICENSE  README.md  __init__.py  hyperspex.py~HEAD  hyperspex.py~main  main.py  main.pyproject  pyproject.toml  requirements.txt  setup.cfg  setup.py  spim.py  ui_image_dock.ui  ui_image_window.ui  ui_mainwindow.ui  ui_spectrum_dock.ui  ui_spectrum_window.ui
.github/workflows/: publish.yml
gui/: ui_image_window.ui  ui_spectrum_window.ui
gui/colorbar/: colorbar.py  ui_colorbar.ui
gui/colorbar/__pycache__/: colorbar.cpython-38.pyc~HEAD_0
hyperspex/: __init__.py  figures.py  fits.py  hyperspex.py  main.py  main.pyproject  spim.py  ui_image_window.ui  ui_spectrum_window.ui  ui_spectrum_window.ui.autosave  utils.py
hyperspex.egg-info/: PKG-INFO  SOURCES.txt
hyperspex/examples/: hyperspex_launcher_notebook.ipynb
hyperspex/gui/: ui_image_window.ui  ui_spectrum_window.ui
hyperspex/gui/colorbar/: colorbar.py  colorbar_widget.py  ui_colorbar.ui
hyperspex/gui/colorbar/__pycache__/: colorbar.cpython-38.pyc~main_0
hyperspex/gui/scientific_spinbox/: scientific_spinbox.py
hyperspex/gui/style/: colordefs.py
hyperspex/style/: dracula.qss  qdark.qss
hyperspex/style/qdark/: LICENSE.txt
style/: qdark.qss
