[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperspex"
version = "0.2.0"
description = "Kinetic Inverse-Laplace Toolbox for MEM fitting"
authors = [
  { name = "Adrien Rousseau" }
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "lmfit",
]