[metadata]
name = hyperspex
version = 1.8
author = Adrien Rousseau
author_email = adrien.rousseau@umontpellier.fr
description = A Python package to help 3D hyperspectral data exploration through a Graphical User Interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdrienR09/hyperspex
project_urls =
    Bug Tracker = https://github.com/AdrienR09/hyperspex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = hyperspex
packages = find:
python_requires = >=3.6

[options.packages.find]
where = hyperspex